--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout: home
 title: Project Unpredictable
 subtitle: Here are some Trajectory Prediction related projects developed by Beihao Xia and Conghao Wong.
-cover-img: /assets/img/cover.png
+cover-img: /assets/img/pic_main.png
 ---
 <!--
  * @Author: Conghao Wong
  * @Date: 2023-02-27 09:54:41
- * @LastEditors: Conghao Wong
- * @LastEditTime: 2023-02-27 11:13:37
+ * @LastEditors: Beihao Xia
+ * @LastEditTime: 2023-03-03 11:04:05
  * @Description: file content
  * @Github: https://cocoon2wong.github.io
  * Copyright 2023 Conghao Wong, All Rights Reserved.
