--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 layout: page
 title: Project Unpredictable
 subtitle: Here are some Trajectory Prediction related projects developed by Beihao Xia and Conghao Wong.
-cover-img: /assets/img/pic_main.png
+cover-img: /subassets/img/pic_main.png
 ---
 <!--
  * @Author: Conghao Wong
  * @Date: 2023-02-27 09:54:41
  * @LastEditors: Conghao Wong
- * @LastEditTime: 2023-03-03 19:51:41
+ * @LastEditTime: 2023-04-28 18:29:13
  * @Description: file content
  * @Github: https://cocoon2wong.github.io
  * Copyright 2023 Conghao Wong, All Rights Reserved.
 -->
 
-<link rel="stylesheet" type="text/css" href="/assets/css/user.css">
+<link rel="stylesheet" type="text/css" href="/subassets/css/user.css">
 
 <style>
     .ref_text {
