add new head images

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@ cover-img: /subassets/img/pic_main.png
  * @Author: Conghao Wong
  * @Date: 2023-02-27 09:54:41
  * @LastEditors: Conghao Wong
- * @LastEditTime: 2023-04-28 18:29:13
+ * @LastEditTime: 2023-04-28 18:42:23
  * @Description: file content
  * @Github: https://cocoon2wong.github.io
  * Copyright 2023 Conghao Wong, All Rights Reserved.
 -->
-
-<link rel="stylesheet" type="text/css" href="/subassets/css/user.css">
 
 <style>
     .ref_text {
@@ -47,6 +45,6 @@ cover-img: /subassets/img/pic_main.png
 </p>
 
 <div align="center">
-    <a class="btn btn-info btn-lg get-started-btn" href="/team/index">Team</a>
-    <a class="btn btn-info btn-lg get-started-btn" href="/publications/index">Publications</a>
+    <a class="btn btn-colorful btn-lg" href="/team/index">Team</a>
+    <a class="btn btn-colorful btn-lg" href="/publications/index">Publications</a>
 </div>
