--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: page
 title: Project Unpredictable
-subtitle: Here are some Trajectory Prediction related projects developed by Beihao Xia and Conghao Wong.
+subtitle: Exploring the World of Trajectory Prediction.
 cover-img: /subassets/img/pic_main.png
 ---
 <!--
  * @Author: Conghao Wong
  * @Date: 2023-02-27 09:54:41
- * @LastEditors: Conghao Wong
- * @LastEditTime: 2023-04-28 18:42:23
+ * @LastEditors: Ziqian Zou
+ * @LastEditTime: 2024-03-07 17:11:49
  * @Description: file content
  * @Github: https://cocoon2wong.github.io
  * Copyright 2023 Conghao Wong, All Rights Reserved.
