Update head image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Project Unpredictable
 subtitle: Exploring the World of Trajectory Prediction.
-cover-img: /subassets/img/pic_main.png
+cover-img: /subassets/img/pic_main_new.jpeg
 ---
 <!--
  * @Author: Conghao Wong
