Add re, update homepage

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ cover-img: /subassets/img/pic_main_new.jpeg
 <!--
  * @Author: Conghao Wong
  * @Date: 2023-02-27 09:54:41
- * @LastEditors: Ziqian Zou
- * @LastEditTime: 2024-03-07 17:11:49
+ * @LastEditors: Conghao Wong
+ * @LastEditTime: 2024-11-29 16:00:38
  * @Description: file content
  * @Github: https://cocoon2wong.github.io
  * Copyright 2023 Conghao Wong, All Rights Reserved.
@@ -24,9 +24,9 @@ cover-img: /subassets/img/pic_main_new.jpeg
 <div class="ref_text">
     <p>
         Time. Space. Reality.
-        It is more than a <strong class="h_01">linear path</strong>.
-        It is a prism of endless <strong class="h_02">possibility</strong>, where a single choice can branch out into infinite realities, creating
-        <strong class="h_03">alternate worlds</strong> from the ones you know.
+        It is more than a <strong>linear path</strong>.
+        It is a prism of endless <strong>possibility</strong>, where a single choice can branch out into infinite realities, creating
+        <strong>alternate worlds</strong> from the ones you know.
     </p>
     <p>
         I am the WATCHER.
@@ -40,8 +40,8 @@ cover-img: /subassets/img/pic_main_new.jpeg
 
 <h1><div class="title_big">Team and Publications</div></h1>
 <p>
-    Our team works on computer vision tasks related to trajectory prediction.
-    Click the buttons below to learn about our team members and publications.
+    We work on the academic research of pedestrian trajectory prediction, a computer vision task.
+    Click the following buttons to learn about our team members and publications.
 </p>
 
 <div align="center">
